ipc/ipdl/test/ipdl/error/ForgottenManagee.ipdl
include protocol ManagerForgot;

// This protocol says ManagerForgot manages it,
// but ManagerForgot does not manage it.

protocol ForgottenManagee {
    manager ManagerForgot;
child:
    async __delete__();
};
